fixing rendering on mobile device for cv page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,23 +41,29 @@
     "vendor/font-awesome/brands"
 ;
 
-.cv-centered {
-  text-align: center;
-}
-.cv-centered h1,
-.cv-centered h2,
-.cv-centered h3,
-.cv-centered h4,
-.cv-centered h5,
-.cv-centered h6 {
-  text-align: center;
-}
-.cv-centered ul,
-.cv-centered ol {
-  display: inline-block;
-  text-align: left;
+.pdf-embed-block {
+  margin-bottom: 2rem;
 }
 
-body.page-cv .sidebar {
-  margin-left: 2rem;
+.pdf-responsive {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.pdf-responsive embed {
+  width: 100%;
+  height: 60vw;
+  min-height: 400px;
+  max-height: 900px;
+  display: block;
+  border: none;
+}
+
+@media (max-width: 600px) {
+  .pdf-responsive embed {
+    height: 60vw;
+    min-height: 300px;
+    max-height: 400px;
+  }
 }
